--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "framer-motion": "^11.11.17",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-color": "^2.19.3",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
